After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703120 - rtsp-media leaks a GstQuery
rtsp-media leaks a GstQuery
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-26 12:44 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-02-25 22:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not leak the query in default_query_stop (670 bytes, patch)
2013-06-26 12:44 UTC, Ognyan Tonchev (redstar_)
none Details | Review

Description Ognyan Tonchev (redstar_) 2013-06-26 12:44:27 UTC
Created attachment 247817 [details] [review]
Do not leak the query in default_query_stop

default_query_stop () in rtsp-media leaks the GstQuery
Comment 1 Wim Taymans 2013-06-26 13:43:08 UTC
commit cd4120ef265a294555b8f4e945023fcc8e533038
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Wed Jun 26 14:42:15 2013 +0200

    rtsp-media: Do not leak the query in default_query_stop
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703120