rtsp-media: Do not leak the query in default_query_stop

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=703120